# hotel_management_admin

./: .dockerignore  .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  GEMINI.md  README.md  backend_pre_start.py  docker-compose.yml  initial_data.py  pyproject.toml  requirements.txt  run.py  start-backend.bat  start-backend.sh  test-api.sh
.github/workflows/: tests.yml
alembic/: env.py
alembic/versions/: 001_initial_schema_with_s3_fields.py  4cacb97e5a14_add_refundable_amount_to_bookings.py  66d91d62d7f9_change_actual_check_in_and_check_out_.py  81f2cb56c85b_add_email_column_to_users.py  93ab1ff6f226_add_actual_check_in_and_check_out_time_.py  a1b2c3d4e5f6_update_rooms_table_columns.py  b1c2d3e4f5a6_add_unique_constraint_building_room_number.py  c3d4e5f6a7b8_add_status_column_to_rooms_table.py  c7bc70762ebe_add_scheduled_check_in_and_check_out_.py  d0d9c14534c3_add_refresh_tokens_table.py  f34a3574c24e_initial_schema.py
app/: main.py
app/api/: routes.py
app/api/dependencies/: auth_deps.py  common.py  s3_deps.py
app/api/endpoints/: auth.py  bookings.py  customers.py  documents.py  health.py  reports.py  rooms.py
app/core/: config.py  logging.py  security.py
app/crud/: __init__.py  base.py  crud_booking.py  crud_customer.py  crud_refresh_token.py  crud_room.py  crud_user.py
app/db/: __init__.py  base_db.py  init_db.py  postgres_db.py
app/models/: base.py  bookings.py  customer.py  enums.py  refresh_token.py  rooms.py  users.py
app/models/schemas/: auth.py  file_upload.py
app/services/: __init__.py  file_validator.py  local_storage_service.py  s3_cleanup.py  s3_service.py
init-scripts/: 01-init.sql
tests/: conftest.py
tests/api/: test_health.py
tests/e2e/: test_booking_workflow.py  test_document_workflow.py
tests/integration/: test_auth.py  test_bookings.py  test_customers.py  test_rooms.py
tests/unit/: test_file_validator.py  test_models.py  test_s3_service.py
