[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "hotel-management-admin"
version = "1.0.0"
description = "Admin-only hotel management system with S3 integration"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]

dependencies = [
    # Web Framework (latest versions with new features)
    "fastapi>=0.115.0",  # Latest with lifespan, improved performance
    "uvicorn[standard]>=0.32.0",
    "starlette>=0.41.0",

    # Database
    "sqlalchemy>=2.0.36",
    "psycopg2-binary>=2.9.10",
    "alembic>=1.14.0",

    # Data Validation (Pydantic v2 with all features)
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "typing-extensions>=4.12.0",

    # Environment
    "python-dotenv>=1.0.0",

    # Security & Auth
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.6",

    # AWS Integration
    "boto3>=1.35.0",
    "botocore>=1.32.0",

    # File Processing
    "python-magic>=0.4.24",

    # Logging
    "python-json-logger>=2.0.7",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.28.0",

    # Test Data & Mocking
    "moto[s3]>=5.1.0",
    "faker>=23.0.0",
    "factory-boy>=3.3.0",

    # Code Quality
    "ruff>=0.8.0",
    "mypy>=1.12.0",
    "pyright>=1.1.390",
    "black>=24.1.0",
    "isort>=5.13.0",

    # Security
    "bandit>=1.8.0",
    "semgrep>=1.45.0",

    # Monitoring & Coverage
    "coverage[toml]>=7.4.0",
    "pytest-benchmark>=4.0.0",

    # Documentation
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/hotel-management-admin"
Repository = "https://github.com/yourusername/hotel-management-admin.git"
Issues = "https://github.com/yourusername/hotel-management-admin/issues"

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=7.0.0",
    "httpx>=0.24.0",
    "moto[s3]>=5.0.0",
]

# UV configuration - no additional settings needed for simple projects

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --strict-markers --tb=short --disable-warnings"
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "e2e: end-to-end tests",
    "slow: slow tests",
    "security: security tests",
]

[tool.coverage.run]
source = ["app"]
branch = true
omit = [
    "*/site-packages/*",
    "*/distutils/*",
    "*/__pycache__/*",
    "*/venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*Protocol.*:",
    "@abstractmethod",
]
precision = 2
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_optional = true
exclude = ["venv/", ".venv/", "migrations/"]

[[tool.mypy.overrides]]
module = [
    "moto.*",
    "magic.*",
    "botocore.*",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 120
target-version = "py314"
exclude = [
    ".git",
    "__pycache__",
    "venv",
    ".venv",
    "migrations",
    "alembic/versions",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "C",    # flake8-comprehensions
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
]
ignore = [
    "E203",  # whitespace before ':'
    "E501",  # line too long (handled by formatter)
    "W605",  # invalid escape sequence
]

[tool.ruff.lint.isort]
known-first-party = ["app"]
known-third-party = ["fastapi", "sqlalchemy", "pydantic"]

[tool.black]
line-length = 120
target-version = ["py314"]
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | migrations
  | alembic
)/
'''

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["app"]
skip_gitignore = true
